@@ -1,5 +1,7 @@
 *0.11.0* *SVN*
 
+* Add extension mechanism for custom ST operations
+
 * Make ST rails rake tasks more configurable
 
 * Add Actor#current_task and simplify Task#servers
